--- a/ranjith.html
+++ b/ranjith.html
@@ -3,6 +3,7 @@
         <title>Home Page</title>
     </head>
     <body>
-        <h1>align ="center" style="background-color: brown;" heading1</h1> 
+        <h1>Write Your first Page</h1> 
+        <p>Write your first page</p>
     </body>
-</html>
+</html
