--- a/raju.html
+++ b/raju.html
@@ -3,6 +3,6 @@
         <title>The bullding blocks</title>
     </head>
     <body>
-<h2>The bullding blacks</h2>
+<h2>The bullding blacksgit</h2>
     </body>
 </html><body
